2011-07-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45819
	* gcc.dg/pr45819.c: New testcase.

2011-07-21  Uros Bizjak  <ubizjak@gmail.com>

	* lib/target-supports.exp (check_avx_os_support_available): New.
	(check_effective_target_avx_runtime): Use it.

2011-07-19  Jason Merrill  <jason@redhat.com>

	PR c++/49785
	* g++.dg/cpp0x/variadic114.C: New.

2011-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/49768
	* gcc.c-torture/execute/pr49768.c: New test.

2011-07-18  Mikael Morin  <mikael.morin@sfr.fr>

	PR fortran/49648
	* gfortran.dg/result_in_spec_4.f90: New test.

2011-07-18  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/49675
	* gfortran.dg/pr49675.f90: New test.

2011-07-17  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/pointer_controlled.adb: New test.

2011-07-15  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/49753
	* g++.dg/torture/pr49309.C: Remove.

2011-07-14  Janis Johnson  <janisjo@codesourcery.com>

	* gcc.target/arm/pr40657-2.c: Remove -march.
	* gcc.target/arm/pr42235.c: Likewise.
	* gcc.target/arm/pr42495.c: Likewise.
	* gcc.target/arm/pr42574.c: Likewise.
	* gcc.target/arm/pr40956.c: Remove target-specific options.
	* gcc.target/arm/pr42505.c: Likewise.

	* lib/target-supports.exp (check_effective_target_arm_thumb1): New.
	* gcc.target/arm/mla-1.c: Skip for arm_thumb1, don't specify -march.

	* gcc.target/arm/pr42093.c: Use "-fno-reorder-blocks".

	* gcc.target/arm/pr39839.c: Don't specify -march, require thumb.
	* gcc.target/arm/thumb-branch1.c: Likewise.

	* gcc.target/arm/pr45701-1.c: Don't specify -march, require thumb.
	* gcc.target/arm/pr45701-2.c: Likewise.

	* gcc.target/arm/vfp-ldmdbs.c: Skip for soft float.
	* gcc.target/arm/vfp-ldmias.c: Likewise.
	* gcc.target/arm/vfp-ldmdbd.c: Likewise.
	* gcc.target/arm/vfp-stmdbs.c: Likewise.
	* gcc.target/arm/vfp-ldmiad.c: Likewise.
	* gcc.target/arm/vfp-stmias.c: Likewise.
	* gcc.target/arm/vfp-stmdbd.c: Likewise.